compilador/test_programs/invalid/01_syntax_missing_semicolon.patito
programa syntax_error;
vars:
    x: entero;

inicio {
    x = 5
    escribe(x);
}
fin
